@@ -3,7 +3,7 @@
  *
  * $Id$
  *
- * Copyright (c) 1991-2004 Francois Felix Ingrand.
+ * Copyright (c) 1991-2005 Francois Felix Ingrand.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -79,7 +79,7 @@ typedef enum {MP_PG, SERV_PG, OPE_PG, XP_PG, OPRS_PG, KILL_PG, OPC_PG} Prog_Type
 #define SERVER_PORT 3400
 #endif
 
-#define COPYRIGHT_STRING "Copyright (c) 1991-2004 Francois Felix Ingrand."
+#define COPYRIGHT_STRING "Copyright (c) 1991-2005 Francois Felix Ingrand."
 
 #endif	/* INCLUDE_constant */
 
